# pystrace

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yaml
pystrace/: __init__.py  __main__.py  _version.py  cli.py  config.json  test_version.py  tracer.py
scripts/: release.sh
