[metadata]
name = pystrace
version = attr: pystrace.__version__
description = Report files opened while executing a command
author = João Pinto
author_email = joao.pinto@vshn.ch
url = https://github.com/joaompinto/pystrace
license = BSD-3

[options]
zip_safe = False
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = pystrace/_version.py
versionfile_build = pystrace/_version.py
tag_prefix =
parentdir_prefix = pystrace-

[options.entry_points]
console_scripts =
    pystrace = pystrace.__main__:main


[bdist_wheel]
universal = 1
